# sirula

./: Cargo.toml  README.md  config.toml  custom.css  style.css  tree.json
sample-config/: README.md  config.toml  default-config.toml  style.css
sample-config/a/: readme.md  style.css
sample-config/b/: config.toml  readme.md  style.css
sample-config/c/: README.md  config.toml  style.css
sample-config/d/: config.toml  readme.md  style.css
sample-config/e/: config.toml  readme.md  style.css
src/: app_entry.rs  config.rs  consts.rs  entry.rs  history.rs  locale.rs  main.rs  util.rs
src/app_entry/: desktop_entry.rs
