[package]
name = "sirula"
version = "1.0.1"
authors = ["Dorian Rudolph"]
edition = "2018"

[dependencies]
freedesktop_entry_parser = "1.2.0"
locale-types = "0.4.0"
libc = "0.2.103"
gtk-layer-shell = "0.5.1"
gtk = "0.16.2"
gio = { version = "0.16.7", features = ["v2_60"] }
gdk = "0.16.2"
gdk-pixbuf = "0.15.11"
glib = "0.16.7"
futures = "0.3.21"
fuzzy-matcher = "0.3.7"
xdg = "2.4.1"
serde = "1.0.138"
serde_derive = "1.0.138"
toml = "0.5.9"
regex = "1.6.0"
osstrtools = "0.2.2"

[profile.release]
lto = true
