[package]
name = "sirula"
version = "1.1.0"
authors = ["Dorian Rudolph", "Jan Luca"]
edition = "2021"

[dependencies]
freedesktop_entry_parser = "1.2.0"
locale-types = "0.4.0"
libc = "0.2.103"
gtk-layer-shell = "0.4.1"
gtk = { version = "0.15.5", features = ["v3_22"] }
gio = { version = "0.15.12", features = ["v2_60"] }
gdk = "0.15.4"
pango = "0.15.4"
gdk-pixbuf = "0.15.11"
glib = "0.15.12"
futures = "0.3.21"
fuzzy-matcher = "0.3.7"
xdg = "2.4.1"
serde = "1.0.138"
serde_derive = "1.0.138"
toml = "0.5.9"
regex = "1.6.0"
osstrtools = {git = "https://github.com/Artturin/osstrtools.git", rev="6360f4f842eb542ff4e62e75851ea8ba83808471"}
shlex = "1.3.0"
freedesktop-desktop-entry = "0.7.13"
which = "8.0.0"

[profile.release]
lto = true
